--- a/index.html
+++ b/index.html
@@ -1,25 +1,42 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DeCoFi - Decentralized Cooperative Finance</title>
-    <meta name="description" content="Decentralized Cooperative Finance platform built on Internet Computer Protocol (ICP)" />
+    <meta
+      name="description"
+      content="Decentralized Cooperative Finance platform built on Internet Computer Protocol (ICP)"
+    />
     <meta name="author" content="DeCoFi" />
 
-    <meta property="og:title" content="DeCoFi - Decentralized Cooperative Finance" />
-    <meta property="og:description" content="Empowering cooperatives and SACCOs with blockchain technology" />
+    <meta
+      property="og:title"
+      content="DeCoFi - Decentralized Cooperative Finance"
+    />
+    <meta
+      property="og:description"
+      content="Empowering cooperatives and SACCOs with blockchain technology"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@DeCoFi" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
